crates/core-macros/tests/compile/fail/describe_value_enum_multi_field_variant.rs
use actrpc_core::DescribeValue;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize, DescribeValue)]
enum BadEnum {
    Pair(String, i32),
}

fn main() {}
